# agentv

./: .dockerignore  .env.example  .env.template  .eslintrc.cjs  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPARISON.md  CONCEPTS.md  CONTRIBUTING.md  DOLT_REMOTE.md  Dockerfile  README.md  ROADMAP.md  STRATEGY.md  TEST_CONSOLIDATION_PLAN.md  adrs.toml  biome.json  docker-compose.yml  eslint.config.cjs  github-copilot-config-issue.md  manifest  node_modules  package.json  pnpm-lock.yaml  research-report-terminal-bench-integration.md  tsconfig.base.json  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json  turbo.json  vitest.config.ts
.agents/: conventions.md  product-boundary.md  publish.md  verification.md  workflow.md
.agentv/: .env.example  .gitignore  config.yaml  providers.yaml  targets.yaml
.beads/: .gitignore  README.md  config.yaml  config.yaml.example  issues.jsonl  metadata.json
.changeset/: add-claude-code-provider.md  add-compare-command.md  add-convert-command.md  add-field-accuracy-evaluator.md  add-pi-coding-agent-provider.md  (+42 more)
examples/features/sdk-python/: README.md  pyproject.toml
examples/features/sdk-python/.agentv/: providers.yaml  targets.yaml
examples/features/sdk-python/evals/: cases.jsonl  dataset.eval.yaml  dataset.jsonl  suite.yaml
examples/features/sdk-python/scripts/: build_eval.py  check_expected_output.py
examples/features/sdk-python/src/agentv_py/: __init__.py  evals.py  grader.py
examples/features/sdk-python/tests/: test_evals.py  test_grader.py
(+4129 files in other folders)
