[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agentv-python-helper-example"
version = "0.1.0"
description = "Repo-local AgentV Python helper example"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
